--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,6 @@
 @import "./_player";
 @import "./_song";
+@import "./_library";
 
 *{
     margin:0;
@@ -9,4 +10,13 @@
 
 h1,h2,h3{
     color:rgb(54,54,54);
+}
+
+body{
+    font-family: 'Roboto', sans-serif;
+}
+
+h3,h4{
+    font-weight: 400;
+    color: rgb(100,100,100);
 }
